# baikalbeat

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  baikalbeat.cc  baikalbeat.ini.sample  build.sh  clean.sh  deps.sh  docker-build.sh  docker-entrypoint.sh
src/: .gitignore  CMakeLists.txt  baikalbeat  baikalbeat.cc  cmake_install.cmake
